@@ -6,8 +6,8 @@ import no.ding.pk.domain.offer.Material;
 import no.ding.pk.domain.offer.MaterialPrice;
 import no.ding.pk.domain.offer.PriceRow;
 import no.ding.pk.repository.offer.PriceRowRepository;
+import no.ding.pk.service.DiscountService;
 import no.ding.pk.service.sap.SapMaterialService;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.modelmapper.ModelMapper;
@@ -16,15 +16,13 @@ import javax.persistence.EntityManager;
 import javax.persistence.EntityManagerFactory;
 import javax.persistence.EntityTransaction;
 import javax.persistence.Query;
-
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -44,6 +42,8 @@ public class PriceRowServiceImplUnitTest {
 
     private EntityManagerFactory emFactory;
 
+    private DiscountService discountService;
+
     @BeforeEach
     public void setup() {
         repository = mock(PriceRowRepository.class);
@@ -52,16 +52,274 @@ public class PriceRowServiceImplUnitTest {
         sapMaterialService = mock(SapMaterialService.class);
         emFactory = mock(EntityManagerFactory.class);
         modelMapper = new ModelMapper();
+        discountService = mock(DiscountService.class);
 
-        service = new PriceRowServiceImpl(repository, materialService, materialPriceService, emFactory, sapMaterialService, modelMapper);
+        service = new PriceRowServiceImpl(discountService, repository, materialService, materialPriceService, emFactory, sapMaterialService, modelMapper);
+    }
+
+    @Test
+    public void shouldUpdateMaterialWithNewValues() {
+        String materialNumber = "50103";
+        String salesOrg = "100";
+        String salesOffice = "129";
+
+        MaterialPrice oldMaterialPrice = MaterialPrice.builder(salesOrg, salesOffice, materialNumber, null, "01")
+                .standardPrice(1817.0)
+                .build();
+
+        doReturn(Optional.ofNullable(oldMaterialPrice)).when(materialPriceService).findBySalesOrgAndSalesOfficeAndMaterialNumberAndDeviceTypeAndSalesZone(
+                anyString(), anyString(), anyString(), any(), anyString());
+
+        Material oldMaterial = Material.builder()
+                .id(1L)
+                .materialNumber(materialNumber)
+                .designation("Lift - Tømming")
+                .materialGroupDesignation("Tj. Lift")
+                .materialTypeDescription("Tjeneste")
+                .materialStandardPrice(oldMaterialPrice)
+                .build();
+
+        when(materialService.save(any())).thenAnswer(invocationOnMock -> invocationOnMock.getArguments()[0]);
+
+        EntityManager entityManager = mock(EntityManager.class);
+        when(entityManager.getTransaction()).thenReturn(mock(EntityTransaction.class));
+        Query query = mock(Query.class);
+        when(query.setParameter(anyString(), anyString())).thenReturn(query);
+        when(query.getResultList()).thenReturn(List.of(oldMaterial));
+        when(entityManager.createNamedQuery(anyString())).thenReturn(query);
+        when(emFactory.createEntityManager()).thenReturn(entityManager);
+
+        PriceRow priceRow = PriceRow.builder()
+                .material(oldMaterial)
+                .standardPrice(1817.0)
+                .discountLevel(3)
+                .build();
+
+        when(repository.save(any())).thenReturn(priceRow);
+
+        when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(oldMaterialPrice);
+
+        List<DiscountLevel> discountLevels = List.of(
+                DiscountLevel.builder(0.0, 1)
+                        .build(),
+                DiscountLevel.builder(90.0, 2)
+                        .build(),
+                DiscountLevel.builder(180.0, 3)
+                        .build(),
+                DiscountLevel.builder(315.0, 4)
+                        .build(),
+                DiscountLevel.builder(468.0, 5)
+                        .build()
+        );
+
+
+
+        MaterialPrice updatedMaterialPrice = MaterialPrice.builder(salesOrg, salesOffice, materialNumber, null, "01")
+                .pricingUnit(1)
+                .standardPrice(1917.0)
+                .build();
+
+        Material updatedMaterial = Material.builder()
+                .materialNumber(materialNumber)
+                .pricingUnit(1)
+                .designation("Lift - Tømming")
+                .materialGroupDesignation("Tj. Lift")
+                .materialTypeDescription("Tjeneste")
+                .materialStandardPrice(updatedMaterialPrice)
+                .build();
+
+        PriceRow updatedPriceRow = PriceRow.builder()
+                .material(updatedMaterial)
+                .standardPrice(1817.0)
+                .discountLevel(3)
+                .build();
+
+        List<PriceRow> actual = service.saveAll(List.of(updatedPriceRow), salesOrg, salesOffice, "1",
+                Map.of(updatedMaterialPrice.getMaterialNumber(), updatedMaterialPrice));
+
+        PriceRow actualPriceRow = actual.get(0);
+
+        updatedMaterial.setId(1L);
+        assertThat(actualPriceRow.getMaterial(), equalTo(updatedMaterial));
     }
 
     @Test
     public void shouldSetDiscountPctByStandardPriceAndDiscountLevelPrice() {
         String materialNumber = "50103";
 
-        MaterialPrice materialPrice = MaterialPrice.builder()
+        MaterialPrice materialPrice = MaterialPrice.builder("100", "100", materialNumber, null, "01")
+                .standardPrice(1817.0)
+                .build();
+
+//        doReturn(materialPrice).when(materialPriceService).findByMaterialNumber(anyString());
+        when(materialPriceService
+                .findBySalesOrgAndSalesOfficeAndMaterialNumberAndDeviceTypeAndSalesZone(
+                        anyString(), anyString(), anyString(), any(), anyString()
+                )).thenReturn(Optional.ofNullable(materialPrice));
+        Material material = Material.builder()
                 .materialNumber(materialNumber)
+                .designation("Lift - Tømming")
+                .materialGroupDesignation("Tj. Lift")
+                .materialTypeDescription("Tjeneste")
+                .materialStandardPrice(materialPrice)
+                .build();
+
+        doReturn(material).when(materialService).save(any());
+
+        EntityManager entityManager = mock(EntityManager.class);
+        when(entityManager.getTransaction()).thenReturn(mock(EntityTransaction.class));
+        Query query = mock(Query.class);
+        when(query.setParameter(anyString(), anyString())).thenReturn(query);
+        when(query.getResultList()).thenReturn(List.of(material));
+        when(entityManager.createNamedQuery(anyString())).thenReturn(query);
+        when(emFactory.createEntityManager()).thenReturn(entityManager);
+
+        PriceRow priceRow = PriceRow.builder()
+                .material(material)
+                .standardPrice(1817.0)
+                .discountLevel(3)
+                .build();
+
+//        when(repository.save(any())).thenReturn(priceRow);
+
+//        when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(materialPrice);
+        when(materialPriceService
+                .findBySalesOrgAndSalesOfficeAndMaterialNumberAndDeviceTypeAndSalesZone(
+                        anyString(), anyString(), anyString(), any(), anyString()
+                )).thenReturn(Optional.ofNullable(materialPrice));
+
+        List<DiscountLevel> discountLevels = List.of(
+                DiscountLevel.builder(0.0, 1)
+                        .zone(1)
+                        .build(),
+                DiscountLevel.builder(90.0, 2)
+                        .zone(1)
+                        .build(),
+                DiscountLevel.builder(180.0, 3)
+                        .zone(1)
+                        .build(),
+                DiscountLevel.builder(315.0, 4)
+                        .zone(1)
+                        .build(),
+                DiscountLevel.builder(468.0, 5)
+                        .zone(1)
+                        .build()
+        );
+
+        String salesOrg = "100";
+        String salesOffice = "129";
+        when(discountService.findDiscountLevelsBySalesOrgAndMaterialNumberAndDiscountLevel(salesOrg, salesOffice,
+                materialNumber, 3, 1)).thenReturn(Collections.singletonList(discountLevels.get(2)));
+
+        Discount discount = Discount.builder(salesOrg, salesOffice, materialNumber, 1817.0, discountLevels)
+                .build();
+
+        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn(salesOrg, salesOffice,
+                Collections.singletonList(materialNumber))).thenReturn(Collections.singletonList(discount));
+
+        when(repository.save(any())).thenAnswer(invocation -> invocation.getArguments()[0]);
+
+        List<PriceRow> actual = service.saveAll(List.of(priceRow), salesOrg, salesOffice, "1",
+                Map.of(materialPrice.getMaterialNumber(), materialPrice));
+
+        PriceRow actualPriceRow = actual.get(0);
+
+        assertThat(actualPriceRow.getDiscountedPrice(), lessThan(actualPriceRow.getStandardPrice()));
+
+        double expectedDiscountPercentage = 180.0 / priceRow.getStandardPrice();
+
+        assertThat(actualPriceRow.getDiscountLevelPct(), equalTo(expectedDiscountPercentage));
+
+        double expectedDiscountedPrice = priceRow.getStandardPrice() - 180.0;
+
+        assertThat(actualPriceRow.getDiscountedPrice(), equalTo(expectedDiscountedPrice));
+
+        assertThat(actualPriceRow.getDiscountLevelPct(), notNullValue());
+    }
+
+    @Test
+    public void shouldSetDiscountLevelToOneWhenManualPriceIsSet() {
+        String materialNumber = "50103";
+        String salesOrg = "100";
+        String salesOffice = "129";
+
+        MaterialPrice materialPrice = MaterialPrice.builder(salesOrg, salesOffice, materialNumber, null, "01")
+                .standardPrice(1817.0)
+                .build();
+
+//        when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(materialPrice);
+        when(materialPriceService
+                .findBySalesOrgAndSalesOfficeAndMaterialNumberAndDeviceTypeAndSalesZone(
+                        anyString(), anyString(), anyString(), any(), anyString()
+                )).thenReturn(Optional.ofNullable(materialPrice));
+
+        Material material = Material.builder()
+                .materialNumber(materialNumber)
+                .designation("Lift - Tømming")
+                .materialGroupDesignation("Tj. Lift")
+                .materialTypeDescription("Tjeneste")
+                .materialStandardPrice(materialPrice)
+                .build();
+
+        when(materialService.save(any())).thenReturn(material);
+
+        EntityManager entityManager = mock(EntityManager.class);
+        when(entityManager.getTransaction()).thenReturn(mock(EntityTransaction.class));
+        Query query = mock(Query.class);
+        when(query.setParameter(anyString(), anyString())).thenReturn(query);
+        when(query.getResultList()).thenReturn(List.of(material));
+        when(entityManager.createNamedQuery(anyString())).thenReturn(query);
+        when(emFactory.createEntityManager()).thenReturn(entityManager);
+
+        double standardPrice = 1817.0;
+        PriceRow priceRow = PriceRow.builder()
+                .material(material)
+                .standardPrice(standardPrice)
+                .manualPrice(standardPrice-0.0)
+                .build();
+
+        when(repository.save(any())).thenReturn(priceRow);
+
+//        when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(materialPrice);
+        when(materialPriceService
+                .findBySalesOrgAndSalesOfficeAndMaterialNumberAndDeviceTypeAndSalesZone(
+                        anyString(), anyString(), anyString(), any(), anyString()
+                )).thenReturn(Optional.ofNullable(materialPrice));
+
+        List<DiscountLevel> discountLevels = List.of(
+                DiscountLevel.builder(0.0, 1)
+                        .build(),
+                DiscountLevel.builder(90.0, 2)
+                        .build(),
+                DiscountLevel.builder(180.0, 3)
+                        .build(),
+                DiscountLevel.builder(315.0, 4)
+                        .build(),
+                DiscountLevel.builder(468.0, 5)
+                        .build()
+        );
+
+
+        Discount discount = Discount.builder(salesOrg, salesOffice, materialNumber, standardPrice, discountLevels)
+                .build();
+
+        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn(salesOrg, salesOffice, Collections.singletonList(materialNumber))).thenReturn(Collections.singletonList(discount));
+
+        when(repository.save(any())).thenAnswer(invocation -> invocation.getArguments()[0]);
+
+        List<PriceRow> actual = service.saveAll(List.of(priceRow), salesOrg, salesOffice, "1",
+                Map.of(materialPrice.getMaterialNumber(), materialPrice));
+
+        assertThat(actual.get(0).getDiscountLevel(), is(1));
+    }
+
+    @Test
+    public void shouldSetDiscountLevelToTwoWhenManualPriceIsSet() {
+        String materialNumber = "50103";
+        String salesOrg = "100";
+        String salesOffice = "129";
+
+        MaterialPrice materialPrice = MaterialPrice.builder(salesOrg, salesOffice, materialNumber, null, "01")
                 .standardPrice(1817.0)
                 .build();
 
@@ -85,59 +343,120 @@ public class PriceRowServiceImplUnitTest {
         when(entityManager.createNamedQuery(anyString())).thenReturn(query);
         when(emFactory.createEntityManager()).thenReturn(entityManager);
 
+        double standardPrice = 1817.0;
         PriceRow priceRow = PriceRow.builder()
                 .material(material)
-                .standardPrice(1817.0)
-                .discountLevel(3)
+                .standardPrice(standardPrice)
+                .manualPrice(standardPrice-80.0)
                 .build();
 
         when(repository.save(any())).thenReturn(priceRow);
 
-        when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(materialPrice);
+//        when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(materialPrice);
+        when(materialPriceService
+                .findBySalesOrgAndSalesOfficeAndMaterialNumberAndDeviceTypeAndSalesZone(
+                        anyString(), anyString(), anyString(), any(), anyString()
+                )).thenReturn(Optional.ofNullable(materialPrice));
 
         List<DiscountLevel> discountLevels = List.of(
-                DiscountLevel.builder()
-                        .level(1)
-                        .discount(0.0)
+                DiscountLevel.builder(0.0, 1)
                         .build(),
-                DiscountLevel.builder()
-                        .level(2)
-                        .discount(90.0)
+                DiscountLevel.builder(90.0, 2)
                         .build(),
-                DiscountLevel.builder()
-                        .level(3)
-                        .discount(180.0)
+                DiscountLevel.builder(180.0, 3)
                         .build(),
-                DiscountLevel.builder()
-                        .level(4)
-                        .discount(315.0)
+                DiscountLevel.builder(315.0, 4)
                         .build(),
-                DiscountLevel.builder()
-                        .level(5)
-                        .discount(468.0)
+                DiscountLevel.builder(468.0, 5)
                         .build()
         );
-        Discount discount = Discount.builder()
-                .materialNumber(materialNumber)
-                .discountLevels(discountLevels)
+
+        Discount discount = Discount.builder(salesOrg, salesOffice, materialNumber, standardPrice, discountLevels)
                 .build();
-        Map<String, Map<String, Map<String, Discount>>> discountMap = Map.of("100", Map.of("129", Map.of(materialNumber, discount)));
 
-        List<PriceRow> actual = service.saveAll(List.of(priceRow), "100", "129", "1", List.of(materialPrice),
-                discountMap);
+        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn(salesOrg, salesOffice, Collections.singletonList(materialNumber))).thenReturn(Collections.singletonList(discount));
 
-        PriceRow actualPriceRow = actual.get(0);
+        when(repository.save(any())).thenAnswer(invocation -> invocation.getArguments()[0]);
 
-        assertThat(actualPriceRow.getDiscountedPrice(), lessThan(actualPriceRow.getStandardPrice()));
+        List<PriceRow> actual = service.saveAll(List.of(priceRow), salesOrg, salesOffice, "1",
+                Map.of(materialPrice.getMaterialNumber(), materialPrice));
 
-        double expectedDiscountPercentage = 180.0 * 100 / priceRow.getStandardPrice();
+        assertThat(actual.get(0).getDiscountLevel(), is(2));
+    }
 
-        assertThat(actualPriceRow.getDiscountLevelPct(), equalTo(expectedDiscountPercentage));
+    @Test
+    public void shouldSetDiscountLevelAboveFiveWhenManualPriceIsSet() {
+        String salesOrg = "100";
+        String salesOffice = "129";
+        String materialNumber = "50103";
 
-        double expectedDiscountedPrice = priceRow.getStandardPrice() - 180.0;
+        MaterialPrice materialPrice = MaterialPrice.builder(salesOrg, salesOffice, materialNumber, null, "01")
+                .standardPrice(1817.0)
+                .build();
 
-        assertThat(actualPriceRow.getDiscountedPrice(), equalTo(expectedDiscountedPrice));
+        when(materialPriceService
+                .findBySalesOrgAndSalesOfficeAndMaterialNumberAndDeviceTypeAndSalesZone(
+                        anyString(), anyString(), anyString(), any(), anyString()
+                )).thenReturn(Optional.ofNullable(materialPrice));
 
-        assertThat(actualPriceRow.getDiscountLevelPct(), notNullValue());
+        Material material = Material.builder()
+                .materialNumber(materialNumber)
+                .designation("Lift - Tømming")
+                .materialGroupDesignation("Tj. Lift")
+                .materialTypeDescription("Tjeneste")
+                .materialStandardPrice(materialPrice)
+                .build();
+
+        when(materialService.save(any())).thenReturn(material);
+
+        EntityManager entityManager = mock(EntityManager.class);
+        when(entityManager.getTransaction()).thenReturn(mock(EntityTransaction.class));
+        Query query = mock(Query.class);
+        when(query.setParameter(anyString(), anyString())).thenReturn(query);
+        when(query.getResultList()).thenReturn(List.of(material));
+        when(entityManager.createNamedQuery(anyString())).thenReturn(query);
+        when(emFactory.createEntityManager()).thenReturn(entityManager);
+
+        double standardPrice = 1817.0;
+        PriceRow priceRow = PriceRow.builder()
+                .material(material)
+                .standardPrice(standardPrice)
+                .manualPrice(standardPrice-500.0)
+                .build();
+
+        when(repository.save(any())).thenReturn(priceRow);
+
+//        when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(materialPrice);
+        when(materialPriceService
+                .findBySalesOrgAndSalesOfficeAndMaterialNumberAndDeviceTypeAndSalesZone(
+                        anyString(), anyString(), anyString(), any(), anyString()
+                )).thenReturn(Optional.ofNullable(materialPrice));
+
+        List<DiscountLevel> discountLevels = List.of(
+                DiscountLevel.builder(0.0, 1)
+                        .build(),
+                DiscountLevel.builder(90.0, 2)
+                        .build(),
+                DiscountLevel.builder(180.0, 3)
+                        .build(),
+                DiscountLevel.builder(315.0, 4)
+                        .build(),
+                DiscountLevel.builder(468.0, 5)
+                        .build()
+        );
+
+        Discount discount = Discount.builder(salesOrg, salesOffice, materialNumber, standardPrice, discountLevels)
+                .build();
+
+        List<String> materials = new ArrayList<>();
+        materials.add(materialNumber);
+
+        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn(salesOrg, salesOffice, materials)).thenReturn(Collections.singletonList(discount));
+        when(repository.save(any())).thenAnswer(invocation -> invocation.getArguments()[0]);
+
+        List<PriceRow> actual = service.saveAll(List.of(priceRow), salesOrg, salesOffice, "1",
+                Map.of(materialPrice.getMaterialNumber(), materialPrice));
+
+        assertThat(actual.get(0).getDiscountLevel(), is(6));
     }
 }
